- search-everywhere also finds attribute declarations
- fix monospace formatting in description lists
- allow curly braces in block IDs, as they can be used as attributes
- don't try to resolve links with unresolved or ambiguous variants; don't resolve links starting at root level or lead to URLs, resolve attributes in anchors

=== 0.30.50 (preview, available from GitHub releases)

- index TODOs only in comments for TODO window (#452)
- improve parser/lexer to support continuation after hard break (again)
- new live template to surround some selected text with tag comments to use in an include (#450)

=== 0.30.49 (preview, available from GitHub releases)

- improving link validation with Antora (#449)
- improving passthrough detection in lexer (#449)

=== 0.30.48 (preview, available from GitHub releases)

- don't create an anchor via intent for a section when one is already present (#446)
- improve parser/lexer to support continuation after hard break
- fix focus problems when switching preview modes using keyboard macros (#448)
- improve checking reference anchors and resolving (#436)
- recognize open block with style source as listing (#401)
- Resolve two colons (`::`) as ROOT module in Antora modules instead of current module (#449)

=== 0.30.47 (preview, available from GitHub releases)

- speedup lookups, validations and search-everywhere by using stub-based in indexes for block IDs and sections (#439)
- allow creating missing files from link and xref inline macros (#440)
- allow callouts with a dot instead of a number (`<.>`) to be parsed and re-formatted correctly (#443)

=== 0.30.46 (preview, available from GitHub releases)

- xrefs can point to local anchors without a prefixed hash (`#`) (#427)
- support adding section titles if anchor points to block ID (#378)
- supporting front matter style header in AsciiDoc files (#434)
- treat numbers correctly for constrained/unconstrained formatting detection in syntax highlighting